# auto_agent_optimiser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/auto_promptimiser/: __init__.py
src/auto_promptimiser/agent/: optimiser_agent.py  sys_msg.py
src/auto_promptimiser/agent/actions/: bash.py  (+7 more)
src/auto_promptimiser/cli_interface/: review_messages.py  run.py
src/auto_promptimiser/core/: action.py  base_action_handler.py  base_agent.py  base_eval_storage.py  base_message_storage.py  base_monitor.py  base_optimiser_agent.py  base_parser.py  bash_executor.py  eval_entities.py  file_manager.py  optimisation_state.py  project_breakdown.py  trajectory_context.py
src/auto_promptimiser/misc/: llm_client.py
src/auto_promptimiser/monitors/: __init__.py  logging_monitor.py
src/auto_promptimiser/parsers/: json_parser.py  xml_yaml_parser.py
src/auto_promptimiser/storage/: eval_storage_nosql.py  message_storage_nosql.py
src/auto_promptimiser/subagent/: __init__.py  config.py  manager.py  subagent.py
tests/: __init__.py  test_local_bash_executor.py  test_local_file_manager.py  test_parsers.py  test_subagent_handlers.py
tests/mocks/: docker_bash_executor.py  docker_file_manager.py  in_memory_file_manager.py  in_memory_storage.py  scripted_bash_executor.py  scripted_llm_client.py
tests/scenarios/: __init__.py  base_scenario.py  tbench_eval_runner.py  test_coding_agent_bad_system_message.py  test_coding_agent_missing_bash_tool.py  test_fix_obvious_bug_in_tool.py
tests/scenarios/assets/: __init__.py  load_asset.py
tests/scenarios/misc/: async_docker_manager.py
(+23 files in other folders)
